--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ async-trait = "0.1.80"
 [features]
 cosmwasm = ["cosmrs/cosmwasm"]
 osmosis = ["osmosis-std"]
+websocket-client = ["tendermint-rpc/websocket-client"]
